tests/expectations/compiler/async_blocks/access_async_block_future_fail.out
Error [ETYC0372117]: Expected a tuple but type `Future<Fn()>` was found.
    --> compiler-test:6:18
     |
   6 |         let y0 = f.0;
     |                  ^^^
Error [ETYC0372117]: Expected a tuple but type `Future<Fn()>` was found.
    --> compiler-test:8:18
     |
   8 |         let y1 = z.3;
     |                  ^^^
